add "gradle run" and up java to 11