@@ -1,6 +1,5 @@
 plugins {
-    id 'java'
-    id 'org.jetbrains.kotlin.jvm' version '1.3.61'
+    id 'org.jetbrains.kotlin.jvm' version '1.3.70'
     id 'application'
     id 'org.openjfx.javafxplugin' version '0.0.8'
 }
@@ -8,17 +7,31 @@ plugins {
 group 'org.example'
 version '1.0-SNAPSHOT'
 
-sourceCompatibility = 1.8
+
+mainClassName = 'com.sd.roguelike.MyApp'
+applicationName = 'CatGame'
+targetCompatibility = 11
+
+def javafxModules = [ 'javafx.controls', 'javafx.fxml', 'javafx.swing', 'javafx.media' ]
+run {
+    doFirst {
+        jvmArgs = [
+                '--module-path', classpath.asPath,
+                '--add-modules', javafxModules.join(',')
+        ]
+    }
+}
 
 repositories {
     mavenCentral()
     maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
+    jcenter()
 }
-mainClassName = 'MyApp'
+
 
 javafx {
     version = "12"
-    modules = [ 'javafx.controls', 'javafx.fxml', 'javafx.swing', 'javafx.media' ]
+    modules = javafxModules
 }
 
 test {
@@ -42,8 +55,8 @@ dependencies {
 }
 
 compileKotlin {
-    kotlinOptions.jvmTarget = "1.8"
+    kotlinOptions.jvmTarget = "11"
 }
 compileTestKotlin {
-    kotlinOptions.jvmTarget = "1.8"
+    kotlinOptions.jvmTarget = "11"
 }
